--- a/index.html
+++ b/index.html
@@ -17,7 +17,45 @@
 
       <div class="row">
         <div class="col-sm-12">
-          Navigation Bar
+                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">Navbar</a>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Exceptional Realty<span class="sr-only">(current)</span></a>
+
+                  <ul class="nav navbar-nav">
+                    <li class="active"><a href="Link">About</a></li>
+                    <li><a href="#"></a>New Properties</li>
+                    <li><a href="#"></a>Listings</li>
+                    <li><a href="#"></a>Market Report</li>
+                    <li><a href="#"></a>Contact</li>
+                    <li><a href="#" target="_blank"></a>H.U.D.</li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                        <a class="twit" href="#" title="Twitter">Twitter</a>
+
+                </li>
+                <li class="nav-item">
+                        <a class="fbook" href="#" title="Facebook">Facebook</a>
+
+                </li>
+
+                <li class="nav-item">
+                  <a class="gplus" href="#" title="Google Plus">Google Plus</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
         </div>
       </div>
 
